# slit-scan-cpp

./: .gitignore  CMakeLists.txt  LICENSE  NOTES.org  README.org
docs/: .2024-08-24-Note-09-11.autosave.xopp  2024-08-24-Note-09-11.xopp  sample.xcf
examples/: #menu.glade#  #menubar.glade#  CMakeLists.txt  CV2GTKVideoTest.cpp  JThread.cpp  MenuTest.cpp  README.org  SSTest.cpp  UITest.cpp  VideoTest.cpp  menu.glade~  menubar.glade  menubar.glade~  uitest  uitest.cmb  uitest.ui
gels/: CMakeLists.txt  README.org
gels/include/: CameraGel.h  CameraGelSource.h  Frame2Canvas.h  GelQueue.h  ImageGel.h  ImageGelSource.h  SlitScan.h  VideoGel.h  VideoGelSource.h  gels.h
gui/: CMakeLists.txt  gui.cpp
gui/include/: AppWindow.h  Application.h  Builder.h  EntryEditor.h  GelAsset.h  GelConfig.h  GelItem.h  GelSelection.h  MainSettings.h  VideoConfig.h  WidgetNames.h  gui.h  menu.h
gui/ui/: .xdp-file_gel_select.ui-V46FJo  .xdp-gel_config.ui-HxKALs  .xdp-slitscan_main.ui-vXUNJF  .xdp-slitscan_main_settings.ui-V8FOg1  file_gel_select.ui  file_select.ui  gel_config.ui  gresource.xml  resources.c  settings  slitscan_main.cmb  slitscan_main.ui  slitscan_main_settings.ui  video_config.ui
main/: CMakeLists.txt  main.cpp
main/include/: application.h  main.h
maths/: CMakeLists.txt
playground/: CMakeLists.txt  CV2GTKVideoTest.cpp  GenTimer.cpp  JThread.cpp  Menubar.cmb  README.org  SSTest.cpp  UITest.cpp  VideoTest.cpp  YamlTest.cpp  uitest.cmb  uitest.ui
